# mcpy

./: README.md  init.py  pyproject.toml  requirements.txt  test.py
examples/: MyPyUI_Test.py  VoltageMeasurements.csv  VoltageMeasurements2.csv  example_Wheatstone_Bridge.ipynb  example_Wheatstone_Bridge.py
src/mcpy/: __init__.py
src/mcpy/BaseType/: BaseFloat.py  MCSamples.py  UIBaseClass.py  UncertaintyDistributions.py
src/mcpy/TypeAUncertainty/: DirectObservations.py
src/mcpy/TypeBUncertainty/: Normal.py  Rectangular.py  StudentT.py  Trapezoidal.py  Triangluar.py
src/mcpy/UncertaintyTypes/: TypeADistribution.py  TypeBUncertainty.py
src/mcpy/userinterface/: DataFrameViewer.py  MCMWidget.py  Ui_MCControlWidget.py  Ui_MCMControlWidget.py  Ui_UncertaintyControlWidget.py  UncertaintyWidget.py
src/mcpy/userinterface/resources/: MCControlWidget.ui  UncertaintyControlWidget.ui  convert.sh
tests/: UnitTest.py
